關於調整高度及速度(殘影解決)

--- a/01-About.html
+++ b/01-About.html
@@ -93,9 +93,7 @@
         <div id="apple_effect">
             <!-- 關於十鼓標題 -->
             <div class="parallax_window">
-                <div class="effect_box lax"
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop) 1, (document.querySelector('#apple_effect').offsetTop+550) 0 "
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+400) 1, (document.querySelector('#apple_effect').offsetTop+550) 2">
+                <div class="effect_box lax" data-lax-opacity="0 1 , 500 0" data-lax-scale="0 1, 500 3">
                     <div class="sec-01 sec">
                     </div>
                 </div>
@@ -104,9 +102,8 @@
 
             <!-- 關於十鼓簡介 -->
             <div class="parallax_window">
-                <div class="effect_box lax "
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1100) 1,(document.querySelector('#apple_effect').offsetTop+2100) 0,"
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 3, (document.querySelector('#apple_effect').offsetTop+1100) 1,(document.querySelector('#apple_effect').offsetTop+1800) 1, (document.querySelector('#apple_effect').offsetTop+2100) 0,">
+                <div class="effect_box lax " data-lax-opacity="500 0, 750 1, 1500 0"
+                    data-lax-scale="500 3, 750 1, 1400 1, 1500 0">
                     <div class="sec-02 sec ">
                         <div class="About ">
                             <div class="about-title-00">關於十鼓</div>
@@ -122,9 +119,8 @@
 
             <!-- 沿革 -->
             <div class="parallax_window">
-                <div class="effect_box lax"
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2100) 0,(document.querySelector('#apple_effect').offsetTop+2650) 1,(document.querySelector('#apple_effect').offsetTop+3650) 0,"
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2100) 3, (document.querySelector('#apple_effect').offsetTop+2650) 1,(document.querySelector('#apple_effect').offsetTop+3350) 1, (document.querySelector('#apple_effect').offsetTop+3650) 0,">
+                <div class="effect_box lax" data-lax-opacity="1500 0, 1750 1, 2500 0"
+                    data-lax-scale="1500 3, 1750 1, 2400 1, 2500 0">
                     <div class="sec-03 sec">
                         <div class="About">
                             <div class="about-title-01">沿革</div>
@@ -144,9 +140,8 @@
 
             <!-- 發展年表 -->
             <div class="parallax_window">
-                <div class="effect_box lax "
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+3650) 0,(document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,"
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+3650) 3, (document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+4900) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,">
+                <div class="effect_box lax " data-lax-opacity="2500 0, 2750 1, 3500 0"
+                    data-lax-scale="2500 3, 2750 1, 3400 1, 3500 0">
                     <div class="sec-04 sec ">
                         <div class="About-02">
                             <div class="about-title-02">發展年表</div>
@@ -216,9 +211,8 @@
 
             <!-- 核心價值 -->
             <div class="parallax_window">
-                <div class="effect_box lax"
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+5200) 0,(document.querySelector('#apple_effect').offsetTop+5750) 1,(document.querySelector('#apple_effect').offsetTop+6750) 0,"
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+5200) 3, (document.querySelector('#apple_effect').offsetTop+5750) 1, (document.querySelector('#apple_effect').offsetTop+6450) 1, (document.querySelector('#apple_effect').offsetTop+6750) 0,">
+                <div class="effect_box lax" data-lax-opacity="3500 0, 3750 1, 4500 0"
+                    data-lax-scale="3500 3, 3750 1, 4400 1, 4500 0">
                     <div class="sec-05 sec">
                         <div class=" About-03">
                             <div class="about-title-00">核心價值</div>
@@ -242,9 +236,8 @@
 
             <!-- 園區主題介紹 -->
             <div class="parallax_window">
-                <div class="effect_box lax"
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6750) 0, (document.querySelector('#apple_effect').offsetTop+7300) 1,(document.querySelector('#apple_effect').offsetTop+8300) 0, "
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6750) 3, (document.querySelector('#apple_effect').offsetTop+7300) 1, (document.querySelector('#apple_effect').offsetTop+8000) 1, (document.querySelector('#apple_effect').offsetTop+8300) 0,">
+                <div class="effect_box lax" data-lax-opacity="4500 0, 4750 1, 5500 0"
+                    data-lax-scale="4500 3, 4750 1, 5400 1, 5500 0">
                     <div class="sec-06 sec">
                         <div class="About-06">
                             <div class="en-title">ABOUT <u
@@ -260,9 +253,8 @@
 
             <!-- 鼓樂饗宴 -->
             <div class="parallax_window">
-                <div class="effect_box lax"
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+8300) 0,(document.querySelector('#apple_effect').offsetTop+8850) 1,(document.querySelector('#apple_effect').offsetTop+9850) 0,"
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+8300) 3, (document.querySelector('#apple_effect').offsetTop+8850) 1, (document.querySelector('#apple_effect').offsetTop+9550) 1, (document.querySelector('#apple_effect').offsetTop+9850) 0,">
+                <div class="effect_box lax" data-lax-opacity="5500 0, 5750 1, 6500 0"
+                    data-lax-scale="5500 3, 5750 1, 6400 1, 6500 0">
                     <div class="sec-07">
                         <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-01" alt="背景左">
                         <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-02" alt="背景右">
@@ -296,9 +288,8 @@
 
             <!-- 極限體驗 -->
             <div class="parallax_window">
-                <div class="effect_box lax"
-                    data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9850) 0, (document.querySelector('#apple_effect').offsetTop+10400) 1,"
-                    data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9850) 3, (document.querySelector('#apple_effect').offsetTop+10400) 1, (document.querySelector('#apple_effect').offsetTop+11000) 1,">
+                <div class="effect_box lax" data-lax-opacity="6500 0, 6750 1"
+                    data-lax-scale="6500 3, 6750 1, 7500 1">
                     <div class="sec-08 sec">
                         <div class="title-08">
                             <i class="fas fa-circle"></i>
@@ -335,53 +326,45 @@
             </div>
             <div class="sec-09-context" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div class="img-group-09">
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/打鼓餅.png" alt="打鼓餅" class="img-09-01">
+                    <div class="img-09 img-09-01">
                         <div class="overlay-ToRight">
                             <div class="img-09-text-right">打鼓餅</div>
                         </div>
                     </div>
 
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/找鼓蛋.jpg" alt="鼓找蛋" class="img-09-01">
+                    <div class="img-09 img-09-02">
                         <div class="overlay-ToDown">
                             <div class="img-09-text-down">鼓找蛋</div>
                         </div>
                     </div>
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/麵線套餐.jpg" alt="麵線套餐" class="img-09-01">
+                    <div class="img-09 img-09-03">
                         <div class="overlay-ToDown">
                             <div class="img-09-text-down">麵線套餐</div>
                         </div>
                     </div>
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/甘蔗汁.jpg" alt="甘蔗汁" class="img-09-01">
+                    <div class="img-09 img-09-04">
                         <div class="overlay-ToLeft">
                             <div class="img-09-text-left">甘蔗汁</div>
                         </div>
                     </div>
 
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/古追燒.jpg" alt="鼓追燒" class="img-09-01">
+                    <div class="img-09 img-09-05">
                         <div class="overlay-ToRight">
                             <div class="img-09-text-right">鼓追燒</div>
                         </div>
                     </div>
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/石鼓套餐.jpg" alt="十鼓套餐" class="img-09-01">
+                    <div class="img-09 img-09-06">
                         <div class="overlay-ToTop">
                             T<div class="img-09-text-top">十鼓套餐</div>
                         </div>
                     </div>
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/下午茶.jpg" alt="下午茶" class="img-09-01">
+                    <div class="img-09 img-09-07">
                         <div class="overlay-ToTop">
                             T<div class="img-09-text-top">下午茶</div>
                         </div>
                     </div>
 
-                    <div class="img-09">
-                        <img src="./img/關於頁面/特色餐飲/調酒.jpg" alt="微量調酒" class="img-09-01">
+                    <div class="img-09 img-09-08">
                         <div class="overlay-ToLeft">
                             <div class="img-09-text-left">微量調酒</div>
                         </div>
@@ -400,56 +383,45 @@
                 </div><i class="fas fa-circle"></i>
             </div>
             <div class="sec-10-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <div class="sec-10-img-group">
-                    <img src="https://pic.pimg.tw/car0126/1499060525-4218239850.jpg" class="sec10-img" alt="台版天空之城">
+                <div class="sec-10-img img10-01">
                     <div class="overlay-ToRight">
                         <div class="img-10-text-right">台版天空之城</div>
                     </div>
                 </div>
-                <div class="sec-10-img-group">
-                    <img src="https://tendrum.com.tw/userfiles/images/%E5%A4%A2%E7%B3%96%E5%8A%87%E5%A0%B4.JPG"
-                        class="sec10-img" alt="夢糖劇場">
+                <div class="sec-10-img img10-02">
                     <div class="overlay-ToDown">
                         <div class="img-10-text-down">夢糖劇場</div>
                     </div>
                 </div>
-                <div class="sec-10-img-group">
-                    <img src="https://4.bp.blogspot.com/-Yt2ya6JDw4Q/WIlwI0FiLTI/AAAAAAAAAZc/vG2BKWcjW2w9bR5DTqLFhk_-TU7pCy1AACPcB/s640/DSC01273%25E5%2584%25AA.JPG"
-                        class="sec10-img" alt="齒輪舞台">
+                <div class="sec-10-img img10-03">
                     <div class="overlay-ToLeft">
                         <div class="img-10-text-left">齒輪舞台</div>
                     </div>
                 </div>
-                <div class="sec-10-img-group">
-                    <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/53698446_2035164049870931_960115960218386432_o.jpg?_nc_cat=110&_nc_sid=730e14&_nc_ohc=vJxT8UzrJg4AX_SFcHb&_nc_ht=scontent.frmq2-1.fna&oh=767f344476aa44d42fd7f8462820bf5d&oe=5FA8E661"
-                        class="sec10-img" alt="永不出軌">
+                <div class="sec-10-img img10-04">
                     <div class="overlay-ToRight">
                         <div class="img-10-text-right">永不出軌</div>
                     </div>
                 </div>
-                <div class="sec-10-img-group">
-                    <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/1546149_245354755641215_1890074086_n.jpg?_nc_cat=106&_nc_sid=cdbe9c&_nc_ohc=6YnhIBLqRngAX8CZvku&_nc_ht=scontent.frmq2-1.fna&oh=20902ed9058fbb40d048a22bdc7c70cd&oe=5FA7E82F"
-                        class="sec10-img" alt="制鼓廠">
+                <div class="sec-10-img img10-05">
                     <div class="overlay-ToTop">
-                        <div class="img-10-text-top">制鼓廠</div>
+                        <div class="img-10-text-top">製鼓廠</div>
                     </div>
                 </div>
-                <div class="sec-10-img-group">
-                    <img src="https://scontent.frmq2-2.fna.fbcdn.net/v/t31.0-8/13568759_627617080748312_8856479280367360089_o.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=jBo7ZywhPagAX9LedrG&_nc_ht=scontent.frmq2-2.fna&oh=a144b38bcbb6e3bc5e234569930a6d8e&oe=5FA685A2"
-                        class="sec10-img" alt="天空步道">
+                <div class="sec-10-img img10-06">
                     <div class="overlay-ToLeft">
                         <div class="img-10-text-left">天空步道</div>
                     </div>
                 </div>
             </div>
-            <div class="footer">此網頁純練習及測試用，若有侵權疑慮請告知。</div>
+
         </div>
 
     </div>
 
     </div>
     <!-- 文創空間 -->
-
+    <div class="footer">此網頁純練習及測試用，若有侵權疑慮請告知。</div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
