關於部分切板至沿革(含手機板)速度有調整

--- a/01-About.html
+++ b/01-About.html
@@ -126,10 +126,10 @@
                             <div class="about-title-01">沿革</div>
                             <div class="about-text-01">
                                 <div class="text-wrap">
-                                    本廠前身為「車路墘製糖所」，1909年由日資「臺灣製糖株式會社」創立，1910年開工生產。民國34年11月由國民政府資源委員會監理，並於次年接收。34/35年期製糖在資源委員會監理下，由原日人製糖會社人員完成。在太平洋戰爭期間，本廠雖未直接受到盟機轟炸，但間接影響設備失修及蔗作廢耕，製糖設備雖尚完整，但廠房等設備乃屬殘破不堪，尤其蔗園荒蕪、原料生產失調更為嚴重。民國35年5月1日「台灣糖業公司」成立，本廠隸屬「第二區分公司」管轄，民國39年7月本公司撤銷區分公司制，本廠劃歸「總爺總廠」督導。
+                                    本廠前身為「車路墘製糖所」，1909年由日資「臺灣製糖株式會社」創立，1910年開工生產。民國34年11月由國民政府資源委員會監理，並於次年接收。在太平洋戰爭期間，本廠雖未直接受到盟機轟炸，但間接影響設備失修及蔗作廢耕。民國35年5月1日「台灣糖業公司」成立，本廠隸屬「第二區分公司」管轄，民國39年7月本公司撤銷區分公司制，劃歸「總爺總廠」督導，民國47年7月總爺糖廠改為「麻佳總廠」。
                                 </div>
                                 <div class="text-wrap">
-                                    民國47年7月總爺糖廠改為「麻佳總廠」，為推行大廠制將「三崁店糖廠」併入本廠，改稱「車崁糖廠」，仍歸麻佳總廠督導。民國56年7月本廠組織調整，三崁店部份業務劃出獨立，本廠恢復「車路墘糖廠」，改隸高雄總廠管轄。民國58年8月配合所在地鄉名更改廠名為仁德糖廠，組織照舊。民國64年6月高雄糖廠撤銷，本廠改隸屏東總廠督導。在日治時代，工場日壓榨量為1,500公噸，民國60年提升為日壓2,600公噸。民國92年7月本廠關廠併入善化糖廠，93年9月由台南區處接管。廠區部分倉庫出租給十鼓文創股份有限公司。(文字來源台灣糖業台南區處)
+                                    為推行大廠制將「三崁店糖廠」併入本廠，改稱「車崁糖廠」，仍歸麻佳總廠督導。民國56年7月本廠組織調整，三崁店部份業務劃出獨立，本廠恢復「車路墘糖廠」，改隸高雄總廠管轄。民國58年8月配合所在地鄉名更改廠名為仁德糖廠，組織照舊。民國64年6月高雄糖廠撤銷，本廠改隸屏東總廠督導。民國92年7月本廠關廠併入善化糖廠，93年9月由台南區處接管。廠區部分倉庫出租給十鼓文創股份有限公司。(文字來源台灣糖業台南區處)
                                 </div>
                             </div>
                         </div>
@@ -289,7 +289,7 @@
             <!-- 極限體驗 -->
             <div class="parallax_window">
                 <div class="effect_box lax" data-lax-opacity="6500 0, 6750 1"
-                    data-lax-scale="6500 3, 6750 1, 7500 1">
+                    data-lax-scale="6500 3, 6750 1, 7000 1, 7500 0 ">
                     <div class="sec-08 sec">
                         <div class="title-08">
                             <i class="fas fa-circle"></i>
@@ -317,56 +317,58 @@
             <!-- 極限體驗 -->
         </div>
         <!-- 特色餐飲 -->
-        <div class="sec-09 sec">
-            <div class="title-09" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <i class="fas fa-circle"></i>
-                <div class="sec-09-line">
-                    <div class="sec-09-title">特色餐飲</div>
-                </div><i class="fas fa-circle"></i>
-            </div>
-            <div class="sec-09-context" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <div class="img-group-09">
-                    <div class="img-09 img-09-01">
-                        <div class="overlay-ToRight">
-                            <div class="img-09-text-right">打鼓餅</div>
+        <div class="contain">
+            <div class="sec-09 sec">
+                <div class="title-09" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <i class="fas fa-circle"></i>
+                    <div class="sec-09-line">
+                        <div class="sec-09-title">特色餐飲</div>
+                    </div><i class="fas fa-circle"></i>
+                </div>
+                <div class="sec-09-context" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <div class="img-group-09">
+                        <div class="img-09 img-09-01">
+                            <div class="overlay-ToRight">
+                                <div class="img-09-text-right">打鼓餅</div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="img-09 img-09-02">
-                        <div class="overlay-ToDown">
-                            <div class="img-09-text-down">鼓找蛋</div>
+                        <div class="img-09 img-09-02">
+                            <div class="overlay-ToDown">
+                                <div class="img-09-text-down">鼓找蛋</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="img-09 img-09-03">
-                        <div class="overlay-ToDown">
-                            <div class="img-09-text-down">麵線套餐</div>
+                        <div class="img-09 img-09-03">
+                            <div class="overlay-ToDown">
+                                <div class="img-09-text-down">麵線套餐</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="img-09 img-09-04">
-                        <div class="overlay-ToLeft">
-                            <div class="img-09-text-left">甘蔗汁</div>
+                        <div class="img-09 img-09-04">
+                            <div class="overlay-ToLeft">
+                                <div class="img-09-text-left">甘蔗汁</div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="img-09 img-09-05">
-                        <div class="overlay-ToRight">
-                            <div class="img-09-text-right">鼓追燒</div>
+                        <div class="img-09 img-09-05">
+                            <div class="overlay-ToRight">
+                                <div class="img-09-text-right">鼓追燒</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="img-09 img-09-06">
-                        <div class="overlay-ToTop">
-                            T<div class="img-09-text-top">十鼓套餐</div>
+                        <div class="img-09 img-09-06">
+                            <div class="overlay-ToTop">
+                                <div class="img-09-text-top">十鼓套餐</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="img-09 img-09-07">
-                        <div class="overlay-ToTop">
-                            T<div class="img-09-text-top">下午茶</div>
+                        <div class="img-09 img-09-07">
+                            <div class="overlay-ToTop">
+                                <div class="img-09-text-top">下午茶</div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="img-09 img-09-08">
-                        <div class="overlay-ToLeft">
-                            <div class="img-09-text-left">微量調酒</div>
+                        <div class="img-09 img-09-08">
+                            <div class="overlay-ToLeft">
+                                <div class="img-09-text-left">微量調酒</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -375,50 +377,51 @@
         <!-- 特色餐飲 -->
 
         <!-- 文創空間 -->
-        <div class="sec-10 sec">
-            <div class="title-10" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <i class=" fas fa-circle"></i>
-                <div class="sec-10-line">
-                    <div class="sec-10-title">文創空間</div>
-                </div><i class="fas fa-circle"></i>
+        <div class="contain">
+            <div class="sec-10 sec">
+                <div class="title-10" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <i class=" fas fa-circle"></i>
+                    <div class="sec-10-line">
+                        <div class="sec-10-title">文創空間</div>
+                    </div><i class="fas fa-circle"></i>
+                </div>
+                <div class="sec-10-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <div class="img-group-10">
+                        <div class="sec-10-img img10-01">
+                            <div class="overlay-ToRight">
+                                <div class="img-10-text-right">台版天空之城</div>
+                            </div>
+                        </div>
+                        <div class="sec-10-img img10-02">
+                            <div class="overlay-ToDown">
+                                <div class="img-10-text-down">夢糖劇場</div>
+                            </div>
+                        </div>
+                        <div class="sec-10-img img10-03">
+                            <div class="overlay-ToLeft">
+                                <div class="img-10-text-left">齒輪舞台</div>
+                            </div>
+                        </div>
+                        <div class="sec-10-img img10-04">
+                            <div class="overlay-ToRight">
+                                <div class="img-10-text-right">永不出軌</div>
+                            </div>
+                        </div>
+                        <div class="sec-10-img img10-05">
+                            <div class="overlay-ToTop">
+                                <div class="img-10-text-top">製鼓廠</div>
+                            </div>
+                        </div>
+                        <div class="sec-10-img img10-06">
+                            <div class="overlay-ToLeft">
+                                <div class="img-10-text-left">天空步道</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="sec-10-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <div class="sec-10-img img10-01">
-                    <div class="overlay-ToRight">
-                        <div class="img-10-text-right">台版天空之城</div>
-                    </div>
-                </div>
-                <div class="sec-10-img img10-02">
-                    <div class="overlay-ToDown">
-                        <div class="img-10-text-down">夢糖劇場</div>
-                    </div>
-                </div>
-                <div class="sec-10-img img10-03">
-                    <div class="overlay-ToLeft">
-                        <div class="img-10-text-left">齒輪舞台</div>
-                    </div>
-                </div>
-                <div class="sec-10-img img10-04">
-                    <div class="overlay-ToRight">
-                        <div class="img-10-text-right">永不出軌</div>
-                    </div>
-                </div>
-                <div class="sec-10-img img10-05">
-                    <div class="overlay-ToTop">
-                        <div class="img-10-text-top">製鼓廠</div>
-                    </div>
-                </div>
-                <div class="sec-10-img img10-06">
-                    <div class="overlay-ToLeft">
-                        <div class="img-10-text-left">天空步道</div>
-                    </div>
-                </div>
-            </div>
-
         </div>
-
     </div>
-
     </div>
     <!-- 文創空間 -->
     <div class="footer">此網頁純練習及測試用，若有侵權疑慮請告知。</div>
@@ -483,8 +486,10 @@
 
             window.requestAnimationFrame(updateLax)
         }
-        console.log(document.querySelector('#apple_effect').offsetTop);
-
+        // console.log(document.querySelector('#apple_effect').offsetTop);
+        window.onscroll = function () {
+            console.log(document.documentElement.scrollTop);
+        }
 
         AOS.init();
     </script>
